@@ -942,7 +942,7 @@ BEGIN
     PUSHBUTTON      "<",MEMW_EXPANDCOLLAPSE,1,259,11,10
 END
 
-DEBUGGER DIALOGEX 54, 74, 548, 305
+DEBUGGER DIALOGEX 54, 74, 542, 305
 STYLE DS_SETFONT | DS_3DLOOK | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "6502 Debugger"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -967,7 +967,7 @@ BEGIN
     PUSHBUTTON      "Step Into",IDC_DEBUGGER_STEP_IN,389,7,38,14
     PUSHBUTTON      "Step Out",IDC_DEBUGGER_STEP_OUT,349,23,37,14
     PUSHBUTTON      "Step Over",IDC_DEBUGGER_STEP_OVER,389,23,38,14
-    LTEXT           "A:",-1,349,83,10,8
+    LTEXT           "A:",IDC_STATIC,349,83,10,8
     LTEXT           "X:",65534,376,83,10,8
     LTEXT           "Y:",65533,404,83,10,8
     LTEXT           "PC:",65532,349,65,13,8
@@ -995,8 +995,10 @@ BEGIN
     EDITTEXT        IDC_DEBUGGER_BOOKMARK,421,223,40,14,ES_AUTOHSCROLL
     PUSHBUTTON      "Add",IDC_DEBUGGER_BOOKMARK_ADD,421,239,40,14
     PUSHBUTTON      "Delete",IDC_DEBUGGER_BOOKMARK_DEL,421,255,40,14
-    PUSHBUTTON      "Rom Patcher",IDC_DEBUGGER_ROM_PATCHER,489,198,49,14
+    PUSHBUTTON      "Rom Patcher",IDC_DEBUGGER_ROM_PATCHER,487,198,46,14
     CONTROL         "",IDC_DEBUGGER_ICONTRAY,"Static",SS_BLACKFRAME,5,7,10,287
+    PUSHBUTTON      "",IDC_DEBUGGER_RESTORESIZE,348,296,9,7
+    LTEXT           "Restore original window size",IDC_STATIC,359,295,90,8
 END
 
 TRACER DIALOGEX 65527, 65513, 398, 319
@@ -1511,7 +1513,7 @@ BEGIN
 
     "DEBUGGER", DIALOG
     BEGIN
-        RIGHTMARGIN, 547
+        RIGHTMARGIN, 541
     END
 
     "ADDBP", DIALOG
